# ortaktakvim

./: .gitignore  =2023.3  DEPLOY.md  README.md  calendar_aggregator.db  main.py  pyproject.toml  replit.md  requirements.txt  setup.sh  test_timezones.ics
attached_assets/: Pasted-Act-as-a-senior-full-stack-engineer-and-build-a-single-_1764755303227.txt
src/: __init__.py  auth.py  caldav_service.py  crypto.py  custom_oauth_service.py  database.py  google_calendar_service.py  ics_feed_service.py  ics_generator.py  logging_service.py  models.py  outlook_calendar_service.py  scheduler.py  settings_service.py  sync_service.py
templates/: admin.html  base.html  dashboard.html  login.html  logs.html  preview.html  profile.html  settings.html  sources_add.html  sources_edit.html
